--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <title>Svartlila Bakgrund med Animerad Eld</title>
+    <title>Lila Eld Animation</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
@@ -11,3 +11,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
