--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </div>
 
     <!-- Elden -->
-    <div class="flame-wrap" aria-hidden="true">
+    <div class="flame-wrap">
+  <div class="flame"></div>
+</div>
+
       <!-- Lager 1 -->
       <svg class="flame-layer lite" viewBox="0 0 1200 200" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
         <defs>
