--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lila/Rosa Eld</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Glitch Background</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrap bottom-safe">
-    <h1>Rå lila / rosa flammor 🔥</h1>
-    <p class="lead">En verklig eld med fladdrande flammor längst ned.</p>
-  </div>
 
-  <!-- Canvas för eld -->
-  <canvas id="fireCanvas"></canvas>
+    <!-- FULLSKÄRMS GLITCH VIDEO -->
+    <video id="glitch" autoplay loop muted playsinline>
+        <source src="glitch.webm" type="video/webm">
+    </video>
 
-  <script src="script.js"></script>
+    <!-- TESTINNEHÅLL (kan tas bort) -->
+    <div class="content">
+        <h1>GLITCH NEON</h1>
+        <p>Din text ovanpå glitch-videon</p>
+    </div>
+
 </body>
 </html>
 
