--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glitch Background</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Glitch med Dimma</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- FULLSKÄRMS GLITCH VIDEO -->
-    <video id="glitch" autoplay loop muted playsinline>
-        <source src="glitch.webm" type="video/webm">
-    </video>
+  <!-- FULLSKÄRMS GLITCH VIDEO -->
+  <video id="glitch" autoplay loop muted playsinline>
+      <source src="glitch.webm" type="video/webm">
+  </video>
 
-    <!-- TESTINNEHÅLL (kan tas bort) -->
-    <div class="content">
-        <h1>GLITCH NEON</h1>
-        <p>Din text ovanpå glitch-videon</p>
-    </div>
+  <!-- Textinnehåll -->
+  <div class="content">
+      <h1>GLITCH NEON</h1>
+      <p>Text ovanpå glitch-videon</p>
+  </div>
 
+  <!-- Canvas för dimma -->
+  <canvas id="fog"></canvas>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
