--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Glitch med Dimma</title>
+  <title>Glitch Neon + Dimma</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- FULLSKÄRMS GLITCH VIDEO -->
+  <!-- Fullskärms glitch video -->
   <video id="glitch" autoplay loop muted playsinline>
-      <source src="glitch.webm" type="video/webm">
+    <source src="glitch.webm" type="video/webm">
   </video>
 
   <!-- Textinnehåll -->
   <div class="content">
-      <h1>GLITCH NEON</h1>
-      <p>Text ovanpå glitch-videon</p>
+    <h1>GLITCH NEON</h1>
+    <p>Levande lila/rosa dimma över texten</p>
   </div>
 
   <!-- Canvas för dimma -->
