--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <!-- Textinnehåll -->
   <div class="content">
-    <h1>GLITCH NEON</h1>
-    <p>Levande lila/rosa dimma över texten</p>
+    <h1>Norén</h1>
+    <p>Cyber Security Technician</p>
   </div>
 
   <!-- Canvas för dimma -->
