--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h1>Norén</h1>
     <p>Cyber Security Technician</p>
   </div>
+<!-- Profilbilden -->
+  <div class="glitch-container">
+  <img src="Me403.PNG" class="glitch-img" />
+</div>
 
   <!-- Canvas för dimma -->
   <canvas id="fog"></canvas>
