--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <img src="Me403.PNG" class="glitch-img" />
 </div>
 
+  <div class="glitch">
+  <div class="glitch-img"></div>
+</div>
+
   <!-- Canvas för dimma -->
   <canvas id="fog"></canvas>
 
